# Elefanto

./: .gitmodules  README.md  com.github.ranfdev.elefanto.json  meson.build
data/: com.github.ranfdev.elefanto.appdata.xml.in  com.github.ranfdev.elefanto.desktop.in  com.github.ranfdev.elefanto.gschema.xml  meson.build
po/: POTFILES  meson.build
src/: accounts.js  com.github.ranfdev.elefanto.data.gresource.xml  com.github.ranfdev.elefanto.src.gresource.xml  fetch.js  main.js  mastodonApi.js  meson.build  utils.js  window.js  window.ui
src/ui/: AccountRow.ui  AccountView.ui  AccountsView.ui  ExpandedStatus.ui  Toot.ui  TootTopBar.ui  loginDialog.ui  timeline.ui
